main section completed

--- a/index.html
+++ b/index.html
@@ -8,6 +8,37 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    
+    <section id="main">
+        <section class="wrapper">
+            <header>
+                <nav class="left">
+                    <h1><a href="./index.html"><img src="./Assets/fastpay - logo.svg" alt="Image"></a></h1>
+                </nav>
+                <nav class="middle">
+                    <ul>
+                        <li><a class="hm" href="#">home</a></li>
+                        <li><a href="#">about</a></li>
+                        <li><a href="#">features</a></li>
+                        <li><a href="#">pricing</a></li>
+                    </ul>
+                </nav>
+                <nav class="right">
+                    <a href="#" class="login-btn">Login</a>
+                    <a href="#" class="signup-btn">Signup</a>
+                </nav>
+            </header>
+            <section class="spotlight">
+                <div class="left">
+                    <p>30 days free trail</p>
+                    <h1>save your time & less expense</h1>
+                    <p class="para">it is india's largest mobile payments and commerce platform</p>
+                    <a href="#" class="get-btn">Get Started</a>
+                </div>
+                <div class="right">
+                    <img src="./Assets/spotlight - image.png" alt="Image">
+                </div>
+            </section>
+        </section>
+    </section>
 </body>
 </html>
