--- a/index.html
+++ b/index.html
@@ -40,5 +40,44 @@
             </section>
         </section>
     </section>
+    <section class="cards">
+        <section class="wrapper">
+            <div class="head">
+                <h2>how it works</h2>
+                <p>Mobile banking differs from mobile payments,which invokes the use of a mobile device</p>
+            </div>
+            <div class="card-container">
+                <div class="item1">
+                    <div class="image">
+                        <img src="./Assets/information.svg" alt="Image">
+                    </div>
+                    <div class="content">
+                        <h3>information</h3>
+                        <p>Enter your information Ensure your details Safe and more</p>
+                    </div>
+                </div>
+                <div class="item2">
+                    <div class="image">
+                        <img src="./Assets/Data Secure.svg" alt="Image">
+                    </div>
+                    <div class="content">
+                        <h3>data secure</h3>
+                        <p>Sending money faster & Easier with end to end Encryption</p>
+                    </div>
+                </div>
+                <div class="item3">
+                    <div class="image">
+                        <img src="./Assets/Add cards.svg" alt="Image">
+                        <span>+Add Cards</span>
+                    </div>
+                    <div class="content">
+                        <h3>Add cards</h3>
+                        <p>Add multiple cards and track your daily expenses with quality interface</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </section>
+    
 </body>
 </html>
