--- a/index.html
+++ b/index.html
@@ -78,6 +78,42 @@
             </div>
         </section>
     </section>
-    
+    <section id="middle">
+        <section class="wrapper">
+            <div class="top">
+                <div class="left">
+                    <img src="./Assets/download.png" alt="Image">
+                </div>
+                <div class="right">
+                    <h3>Download</h3>
+                    <p>Download fast-at mobile banking app for IOS and Android.it help you banking quickly and more smartly.</p>
+                    <div class="box-container">
+                    <div class="box">
+                        <div class="image">
+                            <img src="./Assets/App Store.svg" alt="Image">
+                        </div>
+                        <h5>app store</h5>
+                    </div>
+                    <div class="box">
+                        <div class="image">
+                            <img src="./Assets/Play Store.svg" alt="Image">
+                        </div>
+                        <h5>play store</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="bottom">
+                <div class="left">
+                    <h3>connecting all your banking needs</h3>
+                    <p>Financial transaction remotely using a mobile device such as a smartphone or tablets</p>
+                    <a href="#" class="button">Get Started</a>
+                </div>
+                <div class="right">
+                    <img src="./Assets/Connecting.png" alt="Image">
+                </div>
+            </div>
+        </section>
+    </section>
+
 </body>
 </html>
