--- a/index.html
+++ b/index.html
@@ -1,119 +1,146 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FastPay</title>
-    <link rel="stylesheet" href="./style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body>
     <section id="main">
-        <section class="wrapper">
-            <header>
-                <nav class="left">
-                    <h1><a href="./index.html"><img src="./Assets/fastpay - logo.svg" alt="Image"></a></h1>
-                </nav>
-                <nav class="middle">
-                    <ul>
-                        <li><a class="hm" href="#">home</a></li>
-                        <li><a href="#">about</a></li>
-                        <li><a href="#">features</a></li>
-                        <li><a href="#">pricing</a></li>
-                    </ul>
-                </nav>
-                <nav class="right">
-                    <a href="#" class="login-btn">Login</a>
-                    <a href="#" class="signup-btn">Signup</a>
-                </nav>
-            </header>
-            <section class="spotlight">
-                <div class="left">
-                    <p>30 days free trail</p>
-                    <h1>save your time & less expense</h1>
-                    <p class="para">it is india's largest mobile payments and commerce platform</p>
-                    <a href="#" class="get-btn">Get Started</a>
-                </div>
-                <div class="right">
-                    <img src="./Assets/spotlight - image.png" alt="Image">
-                </div>
-            </section>
+      <section class="wrapper">
+        <header>
+          <nav class="left">
+            <h1>
+              <a href="./index.html"
+                ><img src="./Assets/fastpay - logo.svg" alt="Image"
+              /></a>
+            </h1>
+          </nav>
+          <nav class="middle">
+            <ul>
+              <li><a class="hm" href="#">home</a></li>
+              <li><a href="#">about</a></li>
+              <li><a href="#">features</a></li>
+              <li><a href="#">pricing</a></li>
+            </ul>
+          </nav>
+          <nav class="right">
+            <a href="#" class="login-btn">Login</a>
+            <a href="#" class="signup-btn">Signup</a>
+          </nav>
+        </header>
+        <section class="spotlight">
+          <div class="left">
+            <p>30 days free trail</p>
+            <h1>save your time & less expense</h1>
+            <p class="para">
+              it is india's largest mobile payments and commerce platform
+            </p>
+            <a href="#" class="get-btn">Get Started</a>
+          </div>
+          <div class="right">
+            <img src="./Assets/spotlight - image.png" alt="Image" />
+          </div>
         </section>
+      </section>
     </section>
     <section class="cards">
-        <section class="wrapper">
-            <div class="head">
-                <h2>how it works</h2>
-                <p>Mobile banking differs from mobile payments,which invokes the use of a mobile device</p>
+      <section class="wrapper">
+        <div class="head">
+          <h2>how it works</h2>
+          <p>
+            Mobile banking differs from mobile payments,which invokes the use of
+            a mobile device
+          </p>
+        </div>
+        <div class="card-container">
+          <div class="item1">
+            <div class="image">
+              <img src="./Assets/information.svg" alt="Image" />
             </div>
-            <div class="card-container">
-                <div class="item1">
-                    <div class="image">
-                        <img src="./Assets/information.svg" alt="Image">
-                    </div>
-                    <div class="content">
-                        <h3>information</h3>
-                        <p>Enter your information Ensure your details Safe and more</p>
-                    </div>
-                </div>
-                <div class="item2">
-                    <div class="image">
-                        <img src="./Assets/Data Secure.svg" alt="Image">
-                    </div>
-                    <div class="content">
-                        <h3>data secure</h3>
-                        <p>Sending money faster & Easier with end to end Encryption</p>
-                    </div>
-                </div>
-                <div class="item3">
-                    <div class="image">
-                        <img src="./Assets/Add cards.svg" alt="Image">
-                        <span>+Add Cards</span>
-                    </div>
-                    <div class="content">
-                        <h3>Add cards</h3>
-                        <p>Add multiple cards and track your daily expenses with quality interface</p>
-                    </div>
-                </div>
+            <div class="content">
+              <h3>information</h3>
+              <p>Enter your information Ensure your details Safe and more</p>
             </div>
-        </section>
+          </div>
+          <div class="item2">
+            <div class="image">
+              <img src="./Assets/Data Secure.svg" alt="Image" />
+            </div>
+            <div class="content">
+              <h3>data secure</h3>
+              <p>Sending money faster & Easier with end to end Encryption</p>
+            </div>
+          </div>
+          <div class="item3">
+            <div class="image">
+              <img src="./Assets/Add cards.svg" alt="Image" />
+              <span>+Add Cards</span>
+            </div>
+            <div class="content">
+              <h3>Add cards</h3>
+              <p>
+                Add multiple cards and track your daily expenses with quality
+                interface
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
     </section>
     <section id="middle">
+      <section class="wrapper">
+        <div class="top">
+          <div class="left">
+            <img src="./Assets/download.png" alt="Image" />
+          </div>
+          <div class="right">
+            <h3>Download</h3>
+            <p>
+              Download fast-at mobile banking app for IOS and Android.it help
+              you banking quickly and more smartly.
+            </p>
+            <div class="box-container">
+              <div class="box">
+                <div class="image">
+                  <img src="./Assets/App Store.svg" alt="Image" />
+                </div>
+                <h5>app store</h5>
+              </div>
+              <div class="box">
+                <div class="image">
+                  <img src="./Assets/Play Store.svg" alt="Image" />
+                </div>
+                <h5>play store</h5>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="bottom">
+          <div class="left">
+            <h3>connecting all your banking needs</h3>
+            <p>
+              Financial transaction remotely using a mobile device such as a
+              smartphone or tablets
+            </p>
+            <a href="#" class="button">Get Started</a>
+          </div>
+          <div class="right">
+            <img src="./Assets/Connecting.png" alt="Image" />
+          </div>
+        </div>
+      </section>
+    </section>
+    <section class="subscribe">
         <section class="wrapper">
-            <div class="top">
-                <div class="left">
-                    <img src="./Assets/download.png" alt="Image">
-                </div>
-                <div class="right">
-                    <h3>Download</h3>
-                    <p>Download fast-at mobile banking app for IOS and Android.it help you banking quickly and more smartly.</p>
-                    <div class="box-container">
-                    <div class="box">
-                        <div class="image">
-                            <img src="./Assets/App Store.svg" alt="Image">
-                        </div>
-                        <h5>app store</h5>
-                    </div>
-                    <div class="box">
-                        <div class="image">
-                            <img src="./Assets/Play Store.svg" alt="Image">
-                        </div>
-                        <h5>play store</h5>
-                    </div>
-                </div>
+            <div class="content">
+                <h3>subscribe news letter</h3>
+                <p>Financial transactions remotely using a mobile</p>
             </div>
-            <div class="bottom">
-                <div class="left">
-                    <h3>connecting all your banking needs</h3>
-                    <p>Financial transaction remotely using a mobile device such as a smartphone or tablets</p>
-                    <a href="#" class="button">Get Started</a>
-                </div>
-                <div class="right">
-                    <img src="./Assets/Connecting.png" alt="Image">
-                </div>
-            </div>
+            
         </section>
     </section>
-
-</body>
+  </body>
 </html>
