html section completed

--- a/index.html
+++ b/index.html
@@ -139,8 +139,52 @@
                 <h3>subscribe news letter</h3>
                 <p>Financial transactions remotely using a mobile</p>
             </div>
-            
+            <div class="form">
+              <form action="">
+                <input type="email" placeholder="Enter your email." class="email">
+                <input type="button" value="Get Started" class=btn>
+              </form>
+            </div>
         </section>
+    </section>
+    <section id="footer">
+      <section class="wrapper">
+        <div class="content-box">
+          <div class="container">
+            <div class="first">
+              <div class="image">
+                <img src="./Assets/fastpay - logo.svg" alt="Image">
+              </div>
+              <p>It is India's largest mobile payments and commerce platform</p>
+              <div class="image-container">
+                <span><img src="./Assets/Icon awesome-facebook-f.svg" alt="Image"></span>
+                <span><img src="./Assets/Icon awesome-twitter.svg" alt="Image"></span>
+                <span><img src="./Assets/Icon awesome-linkedin-in.svg" alt="Image"></span>
+              </div>
+            </div>
+            <div class="second">
+              <h4>fast pay</h4>
+              <a href="#">about</a>
+              <a href="#">terms of use</a>
+              <a href="#">privacy policy</a>
+              <a href="#">how it works</a>
+              <a href="#">contact us</a>
+            </div>
+            <div class="third">
+              <h4>support</h4>
+              <a href="#">support center</a>
+              <a href="#">24x7 service</a>
+              <a href="#">quick chat</a>
+            </div>
+            <div class="four">
+              <h4>contact</h4>
+              <a href="#">whatssapp</a>
+              <a href="#">support 24</a>
+            </div>
+          </div>
+          <p>Designed by Mosalman</p>
+        </div>
+      </section>
     </section>
   </body>
 </html>
