--- a/index.html
+++ b/index.html
@@ -134,55 +134,59 @@
       </section>
     </section>
     <section class="subscribe">
-        <section class="wrapper">
-            <div class="content">
-                <h3>subscribe news letter</h3>
-                <p>Financial transactions remotely using a mobile</p>
-            </div>
-            <div class="form">
-              <form action="">
-                <input type="email" placeholder="Enter your email." class="email">
-                <input type="button" value="Get Started" class=btn>
-              </form>
-            </div>
-        </section>
+      <section class="wrapper">
+        <div class="content">
+          <h3>subscribe news letter</h3>
+          <p>Financial transactions remotely using a mobile</p>
+        </div>
+        <div class="form">
+          <form action="">
+            <input type="email" placeholder="Enter your email." class="email" />
+            <input type="button" value="Get Started" class="btn" />
+          </form>
+        </div>
+      </section>
     </section>
     <section id="footer">
       <section class="wrapper">
-        <div class="content-box">
-          <div class="container">
-            <div class="first">
+        <div class="container">
+          <div class="box-container">
+            <ul>
               <div class="image">
                 <img src="./Assets/fastpay - logo.svg" alt="Image">
               </div>
-              <p>It is India's largest mobile payments and commerce platform</p>
-              <div class="image-container">
-                <span><img src="./Assets/Icon awesome-facebook-f.svg" alt="Image"></span>
-                <span><img src="./Assets/Icon awesome-twitter.svg" alt="Image"></span>
-                <span><img src="./Assets/Icon awesome-linkedin-in.svg" alt="Image"></span>
-              </div>
-            </div>
-            <div class="second">
+              <li><p>It is India's largest mobile payments and commerce platform</p></li>
+                <div class="image1">
+                  <img src="./Assets/Icon awesome-facebook-f.svg" alt="Image">
+                </div>
+                <div class="image1">
+                  <img src="./Assets/Icon awesome-twitter.svg" alt="Image">
+                </div>
+                <div class="image1">
+                  <img src="./Assets/./Icon awesome-linkedin-in.svg" alt="Image">
+                </div>
+            </ul>
+            <ul>
               <h4>fast pay</h4>
-              <a href="#">about</a>
-              <a href="#">terms of use</a>
-              <a href="#">privacy policy</a>
-              <a href="#">how it works</a>
-              <a href="#">contact us</a>
-            </div>
-            <div class="third">
-              <h4>support</h4>
-              <a href="#">support center</a>
-              <a href="#">24x7 service</a>
-              <a href="#">quick chat</a>
-            </div>
-            <div class="four">
+              <li><a href="#">about</a></li>
+              <li><a href="#">terms of use</a></li>
+              <li><a href="#">privacy policy</a></li>
+              <li><a href="#">how it works</a></li>
+              <li><a href="#">contact us</a></li>
+            </ul>
+            <ul>
+              <h4>Support</h4>
+              <li><a href="#">support center</a></li>
+              <li><a href="#">24x7 service</a></li>
+              <li><a href="#">quick chat</a></li>
+            </ul>
+            <ul>
               <h4>contact</h4>
-              <a href="#">whatssapp</a>
-              <a href="#">support 24</a>
-            </div>
+              <li><a href="#">whatssapp</a></li>
+              <li><a href="#">support 24</a></li>
+            </ul>
           </div>
-          <p>Designed by Mosalman</p>
+          <p class="ft">Designed by www.steyp.com</p>
         </div>
       </section>
     </section>
